--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "react-scripts": "5.0.0",
         "styled-components": "^5.3.3",
         "typescript": "^4.5.5",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "worker-loader": "^3.0.8"
     },
     "scripts": {
         "start": "react-scripts start",
